演员完成,电影完成一半

--- a/产品文档-后端接口设计.md
+++ b/产品文档-后端接口设计.md
@@ -461,6 +461,13 @@ GET /api/movies?page=1&size=10&genre=动作&year=2024&rating=8.0&actor=演员名
 }
 ```
 
+#### 3.3.1.1 获取电影列表（使用 /movies/list 接口）
+```
+GET /api/movies/list?page=1&size=10&tag=动作&year=2024&rating=8.0&actor=演员名&award=奥斯卡
+
+响应: 同上
+```
+
 #### 3.3.2 获取电影详情
 ```
 GET /api/movies/{id}
