--- a/产品文档-后端接口设计.md
+++ b/产品文档-后端接口设计.md
@@ -613,7 +613,7 @@ GET /api/tv-shows/{id}
 
 #### 3.5.1 获取综艺列表
 ```
-GET /api/variety-shows?page=1&size=10&genre=真人秀&year=2024&rating=8.0&host=主持人名&guest=嘉宾名
+GET /api/varieties?page=1&size=10&genre=真人秀&year=2024&rating=8.0&host=主持人名&guest=嘉宾名
 
 响应:
 {
